--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link style="width: 100px;" rel="icon" type="image/svg+xml" href="/bar-graph.png" />
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CRM</title>
@@ -12,6 +12,9 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script src="
+  https://cdn.jsdelivr.net/npm/react-bootstrap@2.9.2/dist/react-bootstrap.min.js
+  "></script>
 </body>
 
 </html>
